# WiseNet

./: .env.example  .gitignore  README.md  README_es.md  README_fr.md  README_ja.md  README_zh.md  docker-compose-base-gpu.yml  docker-compose-base.yml  docker-compose.yml  install-gpu.sh  install.bat  install.sh
app/: .dockerignore  Dockerfile  babel.cfg  data  entrypoint.sh  main.py  messages.pot  pyproject.toml  start.sh
app/ai/: __init__.py  document_service.py  doubao_llm.py  embedding.py  kimi_llm.py  llm.py  nlp.py
app/api/: auth.py  graph.py  knowledge_lib.py  llm.py  user.py
app/core/: config.py  database.py  error_handle.py  extends_logger.py  i18n.py  middleware.py  security.py
app/graph/: __init__.py  document.py  document_page.py  entity.py  gds_graph.py  graph_generator.py  graph_query.py  keyword.py  node.py  relationship.py  tag.py  virtual_node.py  webpage.py
app/models/: __init__.py  models.py
app/routers/: __init__.py  router.py
app/schemas/: __init__.py  graph.py  knowledge.py  user.py
app/services/: __init__.py  graph_analyze_service.py  graph_base_service.py  graph_generate_service.py  graph_query_service.py  graph_service.py  knowledge_lib_service.py  user_service.py
app/tests/: neo4j_test.py  test_api_graph_analyze.py  test_api_graph_crud.py  test_api_graph_generate.py  test_api_graph_query.py  test_api_knowledge_lib.py  test_api_user.py  test_auth.py  test_document.py  test_embedding.py  test_graph.py  test_graph_search.py  test_i18n.py  test_langdetect.py  test_llm.py  test_main.py  test_nlp.py  test_security.py
(+114 files in other folders)
